<resources>
    <string name="app_name">kenteken Scanner</string>
    <!-- activity names -->
    <string name="aboutheadertext">Kenteken Scanner - Over deze app</string>
    <string name="helpheadertext">Kenteken Scanner - Hulp pagina</string>
    <string name="contactheadertext">Kenteken Scanner - Contact opnemen</string>
    <string name="kentekenopvragenheadertext">Kenteken Scanner - Kenteken opvragen</string>
    <string name="kentekentoevoegenheadertext">Kenteken Scanner - Kenteken toevoegen</string>
    <string name="kentekenscannerheadertext">Kenteken Scanner - Kenteken scannen</string>
<string name="intro_text">Kies optie</string>
    <!-- Action Bar Menu Items -->
    <string name="over">Over deze app</string>
    <string name="hulp">Hulp</string>
    <string name="contact">Contact</string>
    <!-- Alles voor opvragen -->
    <string name="opzoeken">Opvragen</string> <!-- MainActivity Button -->
        <string name="opzoeken_knop">Ophalen</string> <!-- OpvragenActivity Button -->
            <!-- GetKentekenActivity -->
            <string name="opzoeken_title">Kenteken opvragen</string>
            <string name="getkenteken_intro">Hier kunt u kentekens handmatig opvragen</string>
        <!-- Catergory Strings -->
            <string name="kenteken_text">Kenteken</string>
            <string name="merk_text">Merk</string>
            <string name="model_text">Model</string>
            <string name="eerstekleur_text">Kleur #1</string>
            <string name="tweedekleur">Kleur #2</string>
            <string name="category">Categorie</string>
    <!-- Alles voor toevoegen  -->
    <string name="toevoegen">Toevoegen</string> <!-- MainActivity Button -->
        <string name="toevoegen_intro">Vul kenteken en email in</string>
        <string name="toevoegen_knop">Voeg toe</string> <!-- ToevoegenActivity Button -->
        <string name="bedankt_bericht">Bedankt voor uw inzending, uw verzoek wordt verwerkt!</string>
    <!-- Alles voor scanner -->
    <string name="scanner">Scanner</string> <!-- MainActivity Button -->
        <!-- Over pagina -->
        <string name="about_title">Over deze app</string>
        <!-- Disclaimer -->
        <string name="disclaimer_intro">Dit is de disclaimer van de app</string>
        <string name="disclaimer_one">Het is niet verantwoord om deze app te gebruiken tijdens het besturen van een voertuig.</string>
        <string name="disclaimer_tow">Wij stellen ons niet aansprakelijk als u toch een boete krijgt voor het gebruik van deze app, of dat een kenteken niet herkend wordt.</string>
        <string name="disclaimer_three">Voor deze app wordt elke week een automatische update uitgevoerd</string>
        <string name="disclaimer_four">Met het invoeren van een kenteken, geeft u aan een geldig kenteken ingevoerd te hebben.</string>
        <!-- Algemene informatie -->
        <string name="app_version">App versie:</string>
        <string name="app_developers">App Ontwikkelaars:</string>
        <string name="app_developers_names">Nick van Kesteren en Raoul Cornelissen</string>
    <!-- HelpActivty -->
        <string name="help_title">Support pagina</string>
        <string name="help_intro">Hier kun je alle antwoorden vinden op veelgestelde vragen</string>
        <!-- Q1 -->
        <string name="q_1">Hoe werkt deze app?</string>
        <string name="q_1_answer">De app plaats een verzoek bij een externe database, en die haalt de gegevens op.</string>
        <!-- Q2 -->
        <string name="q_2">Welke rechten heeft deze app nodig</string>
        <string name="q_2_answer">De volgende rechten zijn nodig om deze app te laten functioneren:</string>
        <string name="q_2_listitem_1">WI-FI of internet mogelijkheid</string>
        <string name="q_2_listitem_2">Camera toegang</string>
        <!-- Q3 -->
        <string name="q_3">Is deze dienst illegaal?</string>
        <string name="q_3_answer">Nee, deze dienst is niet illegaal zolang deze wordt gebruikt op de openbare weg.</string>

    <!-- ContactActivity -->
        <string name="contact_title">Contact opnemen</string>
        <string name="contact_intro">Hier kunt u contact opnemen met ons</string>
        <!-- Fields -->
        <string name="sender_name">Uw naam:</string>
        <string name="sender_email">Uw e-mail:</string>
        <string name="sender_message">Uw bericht:</string>
        <string name="send_message_button">Verstuur</string>
    <!-- Voertuig Categorie -->
    <string name="catM" translatable="false">Personenauto en bussen​</string>
        <string name="catM_desc" translatable="false">Motorvoertuigen op vier of meer wielen, ontworpen en gebouwd voor het vervoer van personen​</string>
    <string name="catN" translatable="false">Vrachtautos</string>
        <string name="catN_desc" translatable="false">Motorvoertuigen op vier of meer wielen, ontworpen en gebouwd voor het vervoer van goederen​</string>
    <string name="catO" translatable="false">Aanhangwagens</string>
        <string name="catO_desc" translatable="false">Aanhangwagens (inclusief opleggers)​</string>
    <string name="catL" translatable="false">Twee- en driewielige voertuigen</string>
        <string name="catL_desc" translatable="false">Bromfietsen,motorfietsen, driewielers en vierwielers​</string>
    <string name="catT" translatable="false">Trekkers op wielen​</string>
        <string name="catT_desc" translatable="false">Trekkers op wielen​</string>
    <string name="catC" translatable="false">Trekkers op rupsbanden​</string>
        <string name="catC_desc" translatable="false">Trekkers op rupsbanden</string>
    <string name="catR" translatable="false">Aanhangwagen t.b.v. land-of bosbouw​</string>
        <string name="catR_desc" translatable="false">Aanhangwagen t.b.v land- of bosbouw​</string>
    <string name="catS" translatable="false">Verwisselbare getrokken machines​</string>
        <string name="catS_desc" translatable="false">Verwisselbare getrokken machines</string>
    <!-- Copyright -->
    <string name="copyrighttext">© 2016 door Nick en Raoul</string>
    <string name="opzoeken_intro">Vul hier het kenteken van het voertuig in</string>
    <string name="btnScanAgain">Maak een nieuwe scan</string>
    <string name="btnScanLayout">Scan kenteken</string>
    <string name="txtScanLayout">Klik op de knop hieronder om een kenteken te scannen...</string>
    <string name="contactOpnemen">Klik hier om contact op te nemen</string>
</resources>
