<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/help_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:textAlignment="center" />

    <TextView
        android:text="@string/help_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/q_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/q_1_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textView9" />

    <TextView
        android:text="@string/q_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView7"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/q_2_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textStyle="normal|italic"
        android:textAlignment="viewStart" />

    <TextView
        android:text="@string/q_2_listitem_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAlignment="center" />

    <TextView
        android:text="@string/q_2_listitem_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textAlignment="center" />

    <TextView
        android:text="@string/q_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView8"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/q_3_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>