<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/about_activity">

    <TextView
        android:text="@string/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:textAlignment="center" />

    <TextView
        android:text="@string/disclaimer_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/disclaimer_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView6"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/disclaimer_tow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView7" />

    <TextView
        android:text="@string/disclaimer_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView8" />

    <TextView
        android:text="@string/disclaimer_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textView9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:text="@string/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:id="@+id/textView11"
        android:layout_alignTop="@+id/textView6"
        android:gravity="left"/>

    <TextView
        android:text="TextView"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:id="@+id/appversion" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/app_developers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/textView12"
            android:layout_alignTop="@+id/textView6"
            android:gravity="left"/>

        <TextView
            android:text="@string/app_developers_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appdevelopernames"
            android:layout_marginLeft="15dp"
            android:layout_weight="0.13" />
    </LinearLayout>


</LinearLayout>