<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/addkenteken_activity">

    <TextView
        android:text="@string/toevoegen_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textAlignment="center" />

    <TextView
        android:text="@string/kenteken_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:ems="10"
        android:id="@+id/kentekenbox_input"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/button5"
        android:background="@color/kentekenyellow"
        android:layout_weight="0.05"
        android:typeface="normal"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        tools:ignore="ObsoleteLayoutParam" />

    <TextView
        android:text="Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:ems="10"
        android:id="@+id/emailbox_input"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/button5"
        android:background="@color/greylighter"
        android:layout_weight="0.05"
        android:typeface="normal"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textStyle="normal|bold"
        android:textAlignment="center"

        tools:ignore="ObsoleteLayoutParam"
        />

    <Button
        android:text="@string/toevoegen_knop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:onClick="getsearch"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:elevation="0dp"
        android:clickable="false" />
    <!-- Copyright -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="270dp">
        <TextView
            android:text="@string/copyrighttext"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:id="@+id/textView2"

            />
    </LinearLayout>
</LinearLayout>